--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3900
-MONGO_URI=mongodb://localhost:27017/red-social-empresa
+MONGO_URI=mongodb+srv://wilmercasilimas:wilmer230474@red-social-empresa.gdhbal7.mongodb.net/red-social-empresa?retryWrites=true&w=majority&appName=Red-Social-Empresa
 JWT_SECRET=secreto123
