Backend - Módulo completado: Envío de contraseña por correo al registrar empleado
- Integrado servicio de envío de correos mediante nodemailer y Gmail.
- Nuevo helper 'email.js' para manejar la plantilla y configuración de envío.
- Configurado archivo .env con EMAIL_USER y EMAIL_PASS para correo seguro.
- Envío automático de la contraseña temporal al registrar un nuevo usuario.
- Correo incluye nombre del empleado y mensaje personalizado.
- Probado exitosamente en entorno local (Postman y Gmail).
- Validado con roles admin y gerente correctamente.

 Módulo profesional y funcional listo. Avanzamos con los pendientes restantes del backend.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Directorios de producción o builds
+dist/
+build/
+
+# Variables de entorno
 .env
+.env.local
+.env.*.local
+
+# Archivos de subida (como avatares y publicaciones)
+uploads/avatars/
+uploads/publicaciones/
+
+# Editor / IDE
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+desktop.ini
